CharacterActionResolver updated to generate feedbacks